SCOM-1 Updated pom